# anyang-intelligence

./: .gitignore  AGENTS.md  README.md  analytical-interfaces.yaml  artifact-state.yaml  authority-envelope.yaml  bounded-agency.yaml  epistemic-state.yaml  pyproject.toml
archive/: README.md
cli/: README.md
customers/: README.md  commercial-hypotheses.md  comparison-matrix.md  operating-portfolio-dashboard.md  portfolio-knowledge-synergies.md
docs/: analytical-interfaces.md  artificial-enlightened-intelligence.md  authority-model.md  business-capability-end-to-end-simulation-2026-07-24.md  business-capability-skill-architecture.md  business-loop-lifecycle-simulation-2026-07-24.md  cadence-loop-example.md  council-steward-reconciliation-decision-2026-07-24.md  council-steward-role-contract.md  council-steward-source-manifest-2026-07-24-v2.json  council-steward-source-manifest-2026-07-24-v3.json  council-steward-source-manifest-2026-07-24-v4.json  council-steward-source-manifest-2026-07-24-v5.json  council-steward-source-manifest-2026-07-24.json  data-handling-policy.md  data-store-roles.md  epistemic-constitution.md  epistemic-entropy-baseline.md  evidence-awareness-checklist.md  executive-assistant-ai-onboarding-handoff.md  executive-council-identity.md  executive-council-migration-report.md  executive-council-pilot-tracker.md  executive-council-role-contract.md  executive-council-three-receipt-pilot.md  executive-interface-protocol.md  exposure-audit-2026-07-09.md  governance-control-review.md  governance.md  implementation-model.md  install-method.md  loops.md  membranes.md  nested-intelligence-loops-strategy.md  operating-substrate-migration-plan.md  operating-substrate.md  product.md  recursive-self-enhancement-checklist.md  recursive-self-enhancement.md  (+4 more)
finance/: README.md
(+784 files in other folders)
