[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anyang-loop"
version = "0.1.0"
description = "Loop Grammar Engine for Anyang Intelligence Executive OS loops"
readme = "cli/README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
anyang-loop = "anyang_loop.cli:main"
anyang-install = "anyang_loop.install_cli:main"
anyang-coffee = "anyang_loop.coffee_cli:main"
anyang-dream = "anyang_loop.dream_cli:main"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]
