[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anyang-loop"
version = "0.1.0"
description = "Executive Council loop and operating substrate engine for Anyang Intelligence"
readme = "cli/README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
anyang-loop = "anyang_loop.cli:main"
anyang-project = "anyang_loop.project_cli:main"
anyang-coffee = "anyang_loop.coffee_cli:main"
anyang-dream = "anyang_loop.dream_cli:main"
anyang-ops = "anyang_loop.ops_cli:main"
council-loop = "executive_council.cli:main"
council-project = "executive_council.project_cli:main"
council-coffee = "executive_council.coffee_cli:main"
council-dream = "executive_council.dream_cli:main"
council-ops = "executive_council.ops_cli:main"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_cache/pytest-local"
